--- a/Palindroma/index.html
+++ b/Palindroma/index.html
@@ -6,12 +6,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palindroma</title>
+
+    <!-- font awesome -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' integrity='sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==' crossorigin='anonymous'/>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <!-- css -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Palindrome</title>
 </head>
 
 <body>
 
-    <h1 id="output">&nbsp;</h1>
+    <div class="container">
+        <h1 id="output">&nbsp;</h1>
+        <!-- <img src="https://media.tenor.com/QXVs4QWLlzkAAAAC/spider-man.gif" alt="spider-man">
+        <img src="https://media.tenor.com/fuiG0_pco2wAAAAC/confused-john-travolta.gif" alt="confused-john-travolta"> -->
+    </div>
 
 
     <script src="assets/js/script.js"></script>
